k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: elite-dev
  labels:
    name: elite-dev
    team: ctrl-alt-elite
