k8s/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bantam-shuttle-frontend
  namespace: elite-dev
  labels:
    app: bantam-shuttle-frontend
    tier: frontend
spec:
  type: ClusterIP
  selector:
    app: bantam-shuttle-frontend
  ports:
  - name: http
    port: 80
    targetPort: 80
    protocol: TCP
